samples/with-a-kube/components/20_sample_kube_app/namespaces/admin/endpoint/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: endpoint
  labels:
    app: endpoint
spec:
  replicas: 1
  selector:
    matchLabels:
      app: endpoint
  template:
    metadata:
      labels:
        app: endpoint
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: nginx-config
          configMap:
            name: endpoint-nginx-config
