samples/with-a-kube/components/20_sample_kube_app/namespaces/admin/endpoint/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: endpoint

spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: endpoint
