samples/with-a-kube/components/20_sample_kube_app/namespaces/admin/endpoint/ingress.yaml
# filepath: /home/krux/repos/github.com/tuxounet/k2-sdk/samples/with-a-kube/components/20_sample_kube_app/namespaces/admin/endpoint/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: endpoint-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: endpoint
                port:
                  number: 80
